k8s/ingress/blockscout-virtualservice-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blockscout-https
  namespace: blockchain
  labels:
    istio.io/rev: default
spec:
  hosts:
  - snf-83472.ok-kno.grnetcloud.net
  gateways:
  - istio-system/shared-ui-gateway-https
  http:
  - match:
    - uri:
        prefix: /blockscout
    rewrite:
      uri: /
    route:
    - destination:
        host: blockscout.blockchain.svc.cluster.local
        port:
          number: 80
