k8s/ingress/dashboard-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubernetes-dashboard-ui
  namespace: kubernetes-dashboard
spec:
  hosts:
  - dashboard.83.212.80.192.nip.io
  gateways:
  - istio-system/shared-ui-gateway
  http:
  - route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
