k8s/ingress/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-ui
  namespace: istio-system
spec:
  hosts:
  - kiali.83.212.80.192.nip.io
  gateways:
  - istio-system/shared-ui-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
