k8s/ingress/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-ui
  namespace: monitoring
spec:
  hosts:
  - prometheus.83.212.80.192.nip.io
  gateways:
  - istio-system/shared-ui-gateway
  http:
  - route:
    - destination:
        host: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
