k8s/ingress/rpc-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rpc-http
  namespace: blockchain
spec:
  hosts:
  - rpc.83.212.80.192.nip.io
  gateways:
  - istio-system/shared-ui-gateway
  http:
  - match:
    - uri:
        prefix: /rpc
    rewrite:
      uri: /
    route:
    - destination:
        host: rpc-node.blockchain.svc.cluster.local
        port:
          number: 8545
